@@ -1,8 +1,10 @@
           *** IMPORTANT *** 
 
-This is a CVS snapshot of GNet.
-This snapshot was compiled with development GNet code.
-The 1.2 code has not been tested on windows.
+This is a STABLE release of GNet 1.1 on Windows.
+
+This snapshot was compiled with extra development GNet code.
+That code has not been tested on windows. See README for
+a list of Experimental code.
 
 This requires GLib 1.3 snapshot 20010301.
 [http://www.gimp.org/win32/glib-dev-20010301.zip]
@@ -42,12 +44,17 @@ gnet_inetaddr_gethostname() can't handle hostnames over 256 chars.
 gnet_private_inetaddr_list_interfaces() does not support more than 10
 interfaces.
 
+Reminder that on windows, text files have extra "\r" in them where as
+on *NIX they do not. This will throw off SHA & MD5 if you don't filter
+the extra characters out before calling those functions.
+
 MINGW/GCC & CYGWIN Notes
 ------------------------
 
 Compiling GNet on windows with gcc/mingw is supported. You first need to patch 
 w32api up to version 0.5 or later. [see http://mingw.sourceforge.net/] 
-A makefile to build GNet is included in the zip.
+A makefile to build GNet is included in the zip. 
+[UPDATE: I have not tested Mingw 1.0 with GNet]
 
 You can use/link GNet with gcc/mingw. A ".a" is included in the zip.
 A makefile is provided to compile the example programs.
